<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="339dp"
        android:layout_height="161dp"
        android:layout_marginTop="16dp"
        android:text="@string/homeLine3"
        android:textColor="@color/whiteText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="@string/homeLine3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="331dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:text="@string/homeLine2"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/homeLine2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="81dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/img1Description"
        android:src="@drawable/apt2img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="141dp"
        android:layout_height="99dp"
        android:layout_marginTop="28dp"
        android:text="@string/appTitle"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"
        tools:text="@string/appTitle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="310dp"
        android:layout_height="27dp"
        android:layout_marginTop="44dp"
        android:text="@string/homeLine1"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:text="@string/homeLine1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="133dp"
        android:layout_height="89dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:contentDescription="@string/img2Description"
        android:src="@drawable/apt1img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.228" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="133dp"
        android:layout_height="90dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/img3Description"
        android:src="@drawable/apt3img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.088" />

</androidx.constraintlayout.widget.ConstraintLayout>