<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.slideshow.SlideshowFragment">

    <TextView
        android:id="@+id/text_slideshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rentInput"
        android:layout_width="102dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@color/whiteText"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="@dimen/resultsSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/bathInput"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/bathInput"
        android:layout_width="77dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:background="@color/whiteText"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="@dimen/resultsSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/bedroomInput"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="202dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/newLikeTitle"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/newLikeTitle" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="158dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/newLikeTitle"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:text="@string/Notes" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="203dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/Rent"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:text="@string/Rent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="202dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/Baths"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:text="@string/Baths" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="202dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:text="@string/Address"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:text="@string/Address" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="257dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/Bedrooms"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressInput"
        tools:text="@string/Bedrooms" />

    <EditText
        android:id="@+id/addressInput"
        android:layout_width="315dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@color/whiteText"
        android:ems="10"
        android:hint="@string/addressHint"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="@dimen/resultsSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/notesInput"
        android:layout_width="254dp"
        android:layout_height="114dp"
        android:layout_marginTop="12dp"
        android:background="@color/whiteText"
        android:ems="10"
        android:hint="@string/notesHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="@dimen/resultsSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/button"
        android:layout_width="167dp"
        android:layout_height="54dp"
        android:background="@color/btnColor"
        android:text="@string/btnText"
        android:textColor="@color/black"
        android:textSize="@dimen/resultsSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notesInput"
        app:layout_constraintVertical_bias="0.114"
        tools:text="@string/btnText" />

    <EditText
        android:id="@+id/bedroomInput"
        android:layout_width="77dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:background="@color/whiteText"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="@dimen/resultsSize"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/addressInput"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>